2000-05-16  Ion Badulescu  <ib42@earth.cs.columbia.edu>

	* hlfsd/stubs.c (nfsproc_lookup_2_svc): added code to update mtime
	on lookup if MNT2_NFS_OPT_SYMTTL is not defined (copied from
	getattr). This fixes the problem introduced by the Linux nfsv3
	patches.

2000-05-12  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* Makefile.am (EXTRA_DIST_CONF): added conf/autofs/autofs_linux.h

2000-05-10  Ion Badulescu  <ib42@earth.cs.columbia.edu>

	* amd/ops_autofs.c (autofs_handle_fdset): call
	autofs_lookup_failed instead of autofs_mount_failed, if the name
	is not in the map
	(autofs_umount_{succeeded,failed}): pass the actual mount point,
	not its parent, as it's needed for clean-up; 

	* amd/autil.c (am_unmounted): notify autofs that the umount
	succeeded

	* amd/amfs_link.c (amfs_link_[u]mount): autofs link notification
	moved elsewhere

2000-05-09  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* amd/amfs_auto.c (amfs_auto_bgmount): initialize opt_mount_type
	if necessary;
	(amfs_auto_mounted): test if opt_mount_type is NULL first
	(amfs_auto_mount): revert earlier change

	* amd/ops_autofs.c (autofs_mount_failed): remove autofs directory
	if mount failed

2000-05-09  Ion Badulescu  <ionut@moisil.cs.columbia.edu>

	* amd/ops_autofs.c (autofs_link_mount): use am_link as target

	* amd/map.c (unmount_mp): release file handle for autofs f/s about
	to be unmounted; this leak was preventing the unmount altogether

	* amd/amfs_auto.c (amfs_auto_umount): removed autofs-specific
	code, was broken
	(amfs_auto_bgmount): nfs mounts + sublinks is a valid combination,
	handle it

2000-05-07  Ion Badulescu  <ib42@moisil.cs.columbia.edu>

	* Merged changes from stable branch

2000-04-30  Erez Zadok  <ezk@beetle.mcl.cs.columbia.edu>

	* include/am_defs.h, aux/macros/mount_headers.m4,
	aux/macros/try_compile_anyfs.m4: include linux/kdev_t.h and
	linux/list.h before including linux/fs.h, and define __KERNEL__
	for those two headers.  All of this to get a couple of definitions